# toukei

./: .gitignore  Cargo.toml  PROJECT_INFO.md  README.md  macro-optimization-plan.md  stats.csv  stats.json
examples/: async_usage.rs  save_results.rs
src/: cli.rs  config.rs  counter.rs  fc.rs  lib.rs  main.rs  report.rs  stats.rs  walker.rs
src/langs/: definitions.rs  lang_def.rs  lang_err.rs  lang_type.rs  mod.rs  registry.rs
src/parser/: any_value.rs  arg.rs  arg_cursor.rs  args_parser.rs  matches.rs  mod.rs  parse_error.rs  value_parser.rs
src/saver/: exporter.rs  mod.rs  save_error.rs
src/syntax/: classifier.rs  lex_status.rs  lexer.rs  mod.rs  syn_state.rs  syntaxer.rs
src/utils/: chart.rs  format.rs  mod.rs  save.rs
tests/: async_counter_test.rs  debug_test.rs  debug_test2.rs  saver_test.rs
toukei_dll/: Cargo.toml
toukei_dll/src/: lib.rs
