[package]
name = "toukei"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.220", features = ["derive"] }
serde_json = "1.0.141"
walkdir = "2.3.2"
regex = "1.9.1"
rayon = "1.8.1"
lazy_static = "1.4.0"
strum = "0.27"
strum_macros = "0.27"
log = "0.4.29"
tokio = { version = "1.40", features = ["full"] }
futures = "0.3"
num_cpus = "1.16"